--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <!-- roboto font  -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
-  <title>IshtiaqsBlogs</title>
+  <title>Ishtiaq's_Stories</title>
 </head>
 
 <body>
